fix(policy context menu): fix the overflow issue #1083

--- a/web/src/stratio-ui/style/helpers/_variables.scss
+++ b/web/src/stratio-ui/style/helpers/_variables.scss
@@ -28,7 +28,7 @@ $green:		#93ae64 !default;		$green-h:	#6b8e1c !default;
 
 
 // Layout
-$dashboard-main-content---min-height: 50vh !default;
+$dashboard-main-content---margin-bottom: 100px !default;
 $base-padding: 30px !default;
 
 	// Base
